--- a/src/FacebookAutomation/Views/Shared/_Layout.cshtml
+++ b/src/FacebookAutomation/Views/Shared/_Layout.cshtml
@@ -58,11 +58,11 @@
 
                                 <a href="#">
 
-                                    <img src="~/biss/img/site-logo.png" alt="~/biss Logo">
+                                    <img src="~/biss/img/site-logo.png" alt="biss Logo">
 
                                     <div class="width-auto float-left">
 
-                                        <p class="name">FPS</p>
+                                        <p class="name">FAP</p>
 
                                         <div class="cl"></div>
 
@@ -156,136 +156,32 @@
                                 <ul class="desktop-nav hidden-sm hidden-xs hide-on-tablet">
 
                                     <li>
-                                        <a asp-controller="Home" asp-action="Index"><i class="fa fa-home"></i> home <small>biss home page</small></a>
-
-                                        <ul>
-
-                                            <li><a href="~/biss/boxed/index.html">Boxed Version</a></li>
-
-                                            <li><a href="~/biss/index.html">Homepage #1</a></li>
-
-                                            <li><a href="~/biss/index-2.html">Homepage #2</a></li>
-
-                                            <li><a href="~/biss/index-3.html">Homepage #3</a></li>
-
-                                            <li><a href="~/biss/index-4.html">Homepage #4</a></li>
-
-                                            <li><a href="~/biss/index-5.html">Homepage #5</a></li>
-
-                                            <li><a href="~/biss/index-6.html">Homepage #6</a></li>
-
-                                            <li><a href="~/biss/index-7.html">Homepage #7</a></li>
-
-                                        </ul>
+                                        <a asp-controller="Home" asp-action="Index"><i class="fa fa-home"></i> Accueil <small>Page d'accueil</small></a>
 
                                     </li>
 
-                                    <li id="mega-menu-1-hover"><a href="#"><i class="fa fa-bars"></i> mega <small>mega menu</small></a></li>
+                                    <li>
+                                    <a asp-controller="Home" asp-action="Feature"><i class="fa fa-bars"></i> Fonctionnalités <small>Fonctionnalités</small></a></li>
 
                                     <li>
 
-                                        <a href="~/biss/pages.html"><i class="fa fa-file"></i> pages <small>what you can do</small></a>
-
-                                        <ul>
-
-                                            <li><a href="~/biss/pages-404.html">404</a></li>
-
-                                            <li><a href="~/biss/pages-about.html">about</a></li>
-
-                                            <li><a href="~/biss/pages-contacts.html">contacts</a></li>
-
-                                            <li><a href="~/biss/pages-faq.html">FAQ</a></li>
-
-                                            <li><a href="~/biss/pages-left-sidebar.html">left sidebar</a></li>
-
-                                            <li><a href="~/biss/pages-no-sidebars.html">no sidebar</a></li>
-
-                                            <li><a href="~/biss/pages-right-sidebar.html">right sidebar</a></li>
-
-                                            <li><a href="~/biss/pages-two-sidebars.html">two sidebars</a></li>
-
-                                            <li><a href="~/biss/pages-services.html">services</a></li>
-
-                                            <li><a href="~/biss/pages-typography.html">typography</a></li>
-
-                                        </ul>
+                                        <a asp-controller="Home" asp-action="Pricing"><i class="fa fa-phone"></i> Shop <small>Acheter ici </small></a>
 
                                     </li>
 
                                     <li>
 
-                                        <a href="#"><i class="fa fa-file-text-o"></i> projects <small>easy to customize</small></a>
-
-                                        <ul>
-
-                                            <li>
-                                                <a href="~/biss/portfolio.html">portfolio</a>
-
-                                                <ul>
-
-                                                    <li><a href="~/biss/portfolio-2-cols.html">2 cols</a></li>
-
-                                                    <li><a href="~/biss/portfolio-2-cols-sidebar.html">2 cols sidebar</a></li>
-
-                                                    <li><a href="~/biss/portfolio-3-cols.html">3 cols</a></li>
-
-                                                    <li><a href="~/biss/portfolio-3-cols-sidebar.html">3 cols sidebar</a></li>
-
-                                                    <li><a href="~/biss/portfolio-4-cols.html">4 cols</a></li>
-
-                                                    <li><a href="~/biss/portfolio-4-cols-sidebar.html">4 cols sidebar</a></li>
-
-                                                    <li><a href="~/biss/portfolio-single-project.html">single project</a></li>
-
-                                                </ul>
-
-                                            </li>
-
-                                            <li>
-
-                                                <a href="~/biss/shop.html">shop</a>
-
-                                                <ul>
-
-                                                    <li><a href="~/biss/shop-catalog.html">catalog</a></li>
-
-                                                    <li><a href="~/biss/shop-catalog-2.html">catalog #2</a></li>
-
-                                                    <li><a href="~/biss/shop-cart.html">cart</a></li>
-
-                                                    <li><a href="~/biss/shop-checkout.html">checkout</a></li>
-
-                                                    <li><a href="~/biss/shop-single-product.html">single product</a></li>
-
-                                                </ul>
-
-                                            </li>
-
-                                        </ul>
+                                        <a asp-controller="Home" asp-action="Galerie"><i class="fa fa-file-text-o"></i> Album <small>Capture d'ecran</small></a>
 
                                     </li>
 
                                     <li>
 
-                                        <a href="~/biss/blog.html"><i class="fa fa-pencil"></i> blog news <small>latest events</small></a>
-
-                                        <ul>
-
-                                            <li><a href="~/biss/blog-standard.html">standard</a></li>
-
-                                            <li><a href="~/biss/blog-alternative.html">alternative</a></li>
-
-                                            <li><a href="~/biss/blog-masonry.html">masonry</a></li>
-
-                                            <li><a href="~/biss/blog-timeline.html">timeline</a></li>
-
-                                            <li><a href="~/biss/blog-article.html">single article</a></li>
-
-                                        </ul>
+                                        <a asp-controller="Home" asp-action="Faq"><i class="fa fa-pencil"></i> Aide <small>Comment ca marche</small></a>
 
                                     </li>
 
-                                    <li><a asp-controller="Home" asp-action="Contact"><i class="fa fa-envelope"></i> contacts <small>stay in touch</small></a></li>
+                                    <li><a asp-controller="Home" asp-action="Contact"><i class="fa fa-envelope"></i> Contacts <small>Nous contacter</small></a></li>
 
                                 </ul>
 
