--- a/src/FacebookAutomation/Views/Home/Pricing.cshtml
+++ b/src/FacebookAutomation/Views/Home/Pricing.cshtml
@@ -184,18 +184,18 @@
 
                                 <div class="product-details">
 
-                                    <p class="title"><a href="#">Supersonic Hollow Knife</a></p>
+                                    <p class="title"><a href="#">Licence 1 utilisateur</a></p>
 
                                     <p class="price border-bottom-1">
 
-                                        <span class="line-through">$99.00</span>
+                                        @*<span class="line-through">75 000 F CFA</span>*@
 
-                                        <span class="normal">$79.00</span>
+                                        <span class="normal">55 000 F CFA</span>
                                     </p>
 
                                     <p>
 
-                                        <a asp-controller="Home" asp-action="Shopcart" class="to-cart"><i class="fa fa-plus"></i> acheter</a>
+                                        <a asp-controller="Home" asp-action="Shopcart" asp-route-id="1" class="to-cart"><i class="fa fa-plus"></i> acheter</a>
 
                                     </p>
 
@@ -226,18 +226,18 @@
 
                                 <div class="product-details">
 
-                                    <p class="title"><a href="#">Needless Avenue</a></p>
+                                    <p class="title"><a href="#">License 5 Utilisateurs</a></p>
 
                                     <p class="price border-bottom-1">
 
-                                        <span class="line-through">$129.00</span>
+                                        <span class="line-through">275 000 F CFA</span>
 
-                                        <span class="normal">$89.00</span>
+                                        <span class="normal">250 000 F CFA</span>
                                     </p>
 
                                     <p>
 
-                                        <a asp-controller="Home" asp-action="Shopcart" class="to-cart"><i class="fa fa-plus"></i> acheter</a>
+                                        <a asp-controller="Home" asp-action="Shopcart" asp-route-id="2" class="to-cart"><i class="fa fa-plus"></i> acheter</a>
 
                                     </p>
 
@@ -268,18 +268,18 @@
 
                                 <div class="product-details">
 
-                                    <p class="title"><a href="#">Storm Lonesome</a></p>
+                                    <p class="title"><a href="#">License 10 Utilisateurs</a></p>
 
                                     <p class="price border-bottom-1">
 
-                                        <span class="line-through">$79.00</span>
+                                        <span class="line-through">550 000 F CFA</span>
 
-                                        <span class="normal">$69.00</span>
+                                        <span class="normal">500 000 F CFA</span>
                                     </p>
 
                                     <p>
 
-                                        <a asp-controller="Home" asp-action="Shopcart" class="to-cart"><i class="fa fa-plus"></i> acheter</a>
+                                        <a asp-controller="Home" asp-action="Shopcart" asp-route-id="3" class="to-cart"><i class="fa fa-plus"></i> acheter</a>
 
                                     </p>
 
