--- a/src/FacebookAutomation/Views/Home/Shopcart.cshtml
+++ b/src/FacebookAutomation/Views/Home/Shopcart.cshtml
@@ -1,55 +1,56 @@
-﻿@{
+﻿@model Transactions
+@{
     ViewData["Title"] = "Acheter ici";
 }
 
 @section scriptcss {
-     <!-- CSS includes //-->
-<link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
-<link href='http://fonts.googleapis.com/css?family=Archivo+Black' rel='stylesheet' type='text/css'>
-<link rel="stylesheet" href="~/biss/css/normalize.css" type="text/css">
-<link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
-<link rel="stylesheet" href="~/biss/css/animate.css" type="text/css">
-<link rel="stylesheet" href="~/biss/css/bootstrap.min.css" type="text/css">
-<link rel="stylesheet" href="~/biss/css/font-awesome/css/font-awesome.min.css" type="text/css">
-<link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
-<link rel="stylesheet" href="~/biss/css/helpers.css" type="text/css">
-<link rel="stylesheet" href="~/biss/css/component.css" type="text/css">
+    <!-- CSS includes //-->
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans:400,400italic,700,700italic' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=PT+Sans+Narrow:400,700' rel='stylesheet' type='text/css'>
+    <link href='http://fonts.googleapis.com/css?family=Archivo+Black' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" href="~/biss/css/normalize.css" type="text/css">
+    <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
+    <link rel="stylesheet" href="~/biss/css/animate.css" type="text/css">
+    <link rel="stylesheet" href="~/biss/css/bootstrap.min.css" type="text/css">
+    <link rel="stylesheet" href="~/biss/css/font-awesome/css/font-awesome.min.css" type="text/css">
+    <link rel="stylesheet" href="~/biss/css/colorbox-skins/4/colorbox.css" type="text/css">
+    <link rel="stylesheet" href="~/biss/css/helpers.css" type="text/css">
+    <link rel="stylesheet" href="~/biss/css/component.css" type="text/css">
 
-<!-- LayerSlider styles -->
-<link rel="stylesheet" href="~/biss/css/layerslider/css/layerslider.css" type="text/css">
+    <!-- LayerSlider styles -->
+    <link rel="stylesheet" href="~/biss/css/layerslider/css/layerslider.css" type="text/css">
 
-<link rel="stylesheet" href="~/biss/css/colors/1.css" type="text/css" id="site-color">
-<link rel="stylesheet" href="~/biss/css/settings.css" type="text/css">
+    <link rel="stylesheet" href="~/biss/css/colors/1.css" type="text/css" id="site-color">
+    <link rel="stylesheet" href="~/biss/css/settings.css" type="text/css">
 
-<!-- JS includes //-->
-<!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries //-->
-<!--[if lt IE 9]>
-<script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-<script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-<![endif]-->
-<script src="~/biss/js/twitterFetcher_min.js"></script>
+    <!-- JS includes //-->
+    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries //-->
+    <!--[if lt IE 9]>
+    <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
+    <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
+    <![endif]-->
+    <script src="~/biss/js/twitterFetcher_min.js"></script>
 }
 
 @section Scripts {
 
     <!-- JS includes //-->
-<script src="~/biss/js/vendor/jquery-1.11.1.min.js"></script>
-<script src="~/biss/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
-<script src="~/biss/js/vendor/bootstrap.min.js"></script>
-<script src="~/biss/js/imagesloaded.pkgd.min.js"></script>
-<script src="~/biss/js/masonry.pkgd.min.js"></script>
-<script src="~/biss/js/less-1.7.4.min.js"></script>
-<script src="~/biss/js/jquery.colorbox-min.js"></script>
-<script src="~/biss/js/jquery.easing.1.3.js"></script>
-<script src="~/biss/js/jquery.rivathemes.js"></script>
-<script src="~/biss/js/layerslider/jquery-easing-1.3.js" type="text/javascript"></script>
-<script src="~/biss/js/layerslider/jquery-transit-modified.js" type="text/javascript"></script>
-<script src="~/biss/js/layerslider/layerslider.transitions.js" type="text/javascript"></script>
-<script src="~/biss/js/layerslider/layerslider.kreaturamedia.jquery.js" type="text/javascript"></script>
-<script src="~/biss/js/biss.js"></script>
+    <script src="~/biss/js/vendor/jquery-1.11.1.min.js"></script>
+    <script src="~/biss/js/vendor/modernizr-2.6.2-respond-1.1.0.min.js"></script>
+    <script src="~/biss/js/vendor/bootstrap.min.js"></script>
+    <script src="~/biss/js/imagesloaded.pkgd.min.js"></script>
+    <script src="~/biss/js/masonry.pkgd.min.js"></script>
+    <script src="~/biss/js/less-1.7.4.min.js"></script>
+    <script src="~/biss/js/jquery.colorbox-min.js"></script>
+    <script src="~/biss/js/jquery.easing.1.3.js"></script>
+    <script src="~/biss/js/jquery.rivathemes.js"></script>
+    <script src="~/biss/js/layerslider/jquery-easing-1.3.js" type="text/javascript"></script>
+    <script src="~/biss/js/layerslider/jquery-transit-modified.js" type="text/javascript"></script>
+    <script src="~/biss/js/layerslider/layerslider.transitions.js" type="text/javascript"></script>
+    <script src="~/biss/js/layerslider/layerslider.kreaturamedia.jquery.js" type="text/javascript"></script>
+    <script src="~/biss/js/biss.js"></script>
 
-<script>
+    <script>
 (function($) {
 	"use strict";
 
@@ -73,10 +74,10 @@
 	});
 
 })(jQuery);
-</script>
+    </script>
 
 }
-		<!-- Title bar start //-->
+<!-- Title bar start //-->
 
 <section class="title-bar bg-img-15 transparent-bg-secondary">
 
@@ -108,193 +109,193 @@
     <section>
 
         <div class="container">
+            <form asp-controller="Home" asp-action="Paiement" method="post">
+                <div class="row">
 
-            <div class="row">
+                    <div class="col-lg-4 col-md-4 margin-top--70">
 
-                <div class="col-lg-4 col-md-4 margin-top--70">
+                        <!-- Shipping start //-->
 
-                    <!-- Shipping start //-->
+                        <aside class="widget">
 
-                    <aside class="widget">
+                            <h2 class="widget-title">Information Client</h2>
 
-                        <h2 class="widget-title">Information Client</h2>
+                            <div class="widget-content">
 
-                        <div class="widget-content">
+                                <div class="form-elem form-elem-short">
 
-                            <div class="form-elem form-elem-short">
+                                    <label for="cart-info-nom">Nom * :</label>
 
-                                <label for="cart-info-nom">Nom * :</label>
+                                    <input asp-for="Nom" type="text" name="cart-info-nom" id="cart-info-nom" required>
 
-                                <input type="text" name="cart-info-nom" id="cart-info-nom" required>
+                                </div>
 
-                            </div>
+                                <div class="form-elem form-elem-short">
 
-                            <div class="form-elem form-elem-short">
+                                    <label for="cart-info-email">Email * :</label>
 
-                                <label for="cart-info-email">Email * :</label>
+                                    <input asp-for="email" type="text" name="cart-info-email" id="cart-info-email" required>
 
-                                <input type="text" name="cart-info-email" id="cart-info-email" required>
+                                </div>
 
-                            </div>
+                                <div class="form-elem form-elem-short">
 
-                            <div class="form-elem form-elem-short">
+                                    <label for="cart-info-numero">Numéro * :</label>
 
-                                <label for="cart-info-numero">Numéro * :</label>
+                                    <input asp-for="NumeroClient" type="text" name="cart-info-numero" id="cart-info-numero" required>
 
-                                <input type="text" name="cart-info-numero" id="cart-info-numero" required>
+                                </div>
 
-                            </div>
+                                @*<div class="form-elem form-elem-short">
 
-                            @*<div class="form-elem form-elem-short">
+                                        <button class="biss-btn biss-btn-secondary"><i class="fa fa-check"></i> Apply</button>
 
-                                <button class="biss-btn biss-btn-secondary"><i class="fa fa-check"></i> Apply</button>
-
-                            </div>*@
-
-                        </div>
-
-                    </aside>
-
-                    <!-- Shipping end //-->
-                    <!-- Promo start //-->
-
-                    <aside class="widget">
-
-                        <h2 class="widget-title">promocode</h2>
-
-                        <div class="widget-content">
-
-                            <div class="form-elem form-elem-short">
-
-                                <label for="cart-shipping-promocode">Promocode:</label>
-
-                                <input type="text" name="cart-shipping-promocode" id="cart-shipping-promocode">
+                                    </div>*@
 
                             </div>
 
-                            <div class="form-elem form-elem-short">
+                        </aside>
 
-                                <button class="biss-btn biss-btn-secondary"><i class="fa fa-check"></i> Apply</button>
+                        <!-- Shipping end //-->
+                        <!-- Promo start //-->
+
+                        @*<aside class="widget">
+
+                            <h2 class="widget-title">promocode</h2>
+
+                            <div class="widget-content">
+
+                                <div class="form-elem form-elem-short">
+
+                                    <label for="cart-shipping-promocode">Promocode:</label>
+
+                                    <input type="text" name="cart-shipping-promocode" id="cart-shipping-promocode">
+
+                                </div>
+
+                                <div class="form-elem form-elem-short">
+
+                                    <button class="biss-btn biss-btn-secondary"><i class="fa fa-check"></i> Apply</button>
+
+                                </div>
 
                             </div>
 
-                        </div>
+                        </aside>*@
 
-                    </aside>
-
-                    <!-- Promo end //-->
-
-                </div>
-
-                <div class="clearfix hidden-lg hidden-md"></div>
-
-                <div class="col-lg-8 col-md-8 sm-margin-top-70 md-margin-top-70">
-
-                    <div class="cart-in-cart">
-
-                        <span>1 items</span> are in your shopping cart now.
+                        <!-- Promo end //-->
 
                     </div>
 
-                    <!-- Product table start //-->
+                    <div class="clearfix hidden-lg hidden-md"></div>
 
-                    <table class="cart-product-table">
+                    <div class="col-lg-8 col-md-8 sm-margin-top-70 md-margin-top-70">
 
-                        <thead>
+                        <div class="cart-in-cart">
 
-                            <tr>
-
-                                <th class="w1">#</th>
-
-                                <th class="w2">Item</th>
-
-                                <th class="w3">Price</th>
-
-                                <th class="w3">Qty</th>
-
-                                <th class="w3">Total</th>
-
-                            </tr>
-
-                        </thead>
-
-                        <tbody>
-
-                            <tr>
-
-                                <td class="w1">1</td>
-
-                                <td class="w2 title"><a href="#"><i class="fa fa-times remove"></i></a> <a href="#">Licence 1 utilisateur</a></td>
-
-                                <td class="w3 price"><span id="cart-table-price-1" data-val="55000">55000</span></td>
-
-                                <td class="w3 qty">
-
-                                    <i class="fa fa-plus cart-table-change-qty" data-position="1"></i>
-
-                                    <span id="cart-table-display-qty-1" data-qty="1">1</span>
-
-                                    <i class="fa fa-minus cart-table-change-qty" data-position="1"></i>
-
-                                    <!-- Qty of the product is here //-->
-
-                                    <input type="hidden" name="cart-table-qty-1" id="cart-table-qty-1" value="1">
-
-                                </td>
-
-                                <td class="w3 total">
-
-                                    <span id="cart-table-display-total-1">55000</span>
-
-                                    <!-- Total price of the product is here //-->
-
-                                    <input type="hidden" name="cart-table-total-1" id="cart-table-total-1" value="55000">
-
-                                </td>
-
-                            </tr>
-
-                        </tbody>
-
-                    </table>
-
-                    <!-- Product table end //-->
-                    <!-- Totals start //-->
-
-                    <aside class="widget">
-
-                        <h2 class="widget-title">Commande totals</h2>
-
-                        <div class="widget-content">
-
-                            <ul class="cart-totals">
-
-                                @*<li><span class="sp1">Cart subtotals:</span> <span class="sp2">$1000.00</span></li>
-
-                                <li><span class="sp1">Shipping:</span> <span class="sp2">FREE</span></li>*@
-
-                                <li class="t"><span class="sp1">Total:</span> <span class="sp2">$1000.00</span></li>
-
-                            </ul>
-
-                            <p>
-
-                                <button class="biss-btn biss-btn-secondary margin-right-10" id="cart-update-cart"><i class="fa fa-refresh"></i> Annuler</button>
-
-                                <button class="biss-btn biss-btn-primary" id="cart-checkout">Valider Paiement <i class="fa fa-arrow-right"></i></button>
-
-                            </p>
+                            <span>1 items</span> are in your shopping cart now.
 
                         </div>
 
-                    </aside>
+                        <!-- Product table start //-->
 
-                    <!-- Totals end //-->
+                        <table class="cart-product-table">
+
+                            <thead>
+
+                                <tr>
+
+                                    <th class="w1">#</th>
+
+                                    <th class="w2">Item</th>
+
+                                    <th class="w3">Price</th>
+
+                                    <th class="w3">Qty</th>
+
+                                    <th class="w3">Total</th>
+
+                                </tr>
+
+                            </thead>
+
+                            <tbody>
+
+                                <tr>
+
+                                    <td class="w1">1</td>
+
+                                    <td class="w2 title"><a href="#"><i class="fa fa-times remove"></i></a> <a href="#">@Model.produit.Description</a></td>
+
+                                    <td class="w3 price"><span id="cart-table-price-1" data-val="@Model.produit.PrixVente">@Model.produit.PrixVente</span></td>
+
+                                    <td class="w3 qty">
+
+                                        <i class="fa fa-plus cart-table-change-qty" data-position="1"></i>
+
+                                        <span id="cart-table-display-qty-1" data-qty="1">1</span>
+
+                                        <i class="fa fa-minus cart-table-change-qty" data-position="1"></i>
+
+                                        <!-- Qty of the product is here //-->
+
+                                        <input asp-for="Quantite" type="hidden" name="cart-table-qty-1" id="cart-table-qty-1" value="1">
+
+                                    </td>
+
+                                    <td class="w3 total">
+
+                                        <span id="cart-table-display-total-1">@Model.produit.PrixVente</span>
+
+                                        <!-- Total price of the product is here //-->
+
+                                        <input asp-for="Montant" type="hidden" name="cart-table-total-1" id="cart-table-total-1" value="@Model.produit.PrixVente">
+
+                                    </td>
+
+                                </tr>
+
+                            </tbody>
+
+                        </table>
+
+                        <!-- Product table end //-->
+                        <!-- Totals start //-->
+
+                        <aside class="widget">
+
+                            <h2 class="widget-title">Commande totals</h2>
+
+                            <div class="widget-content">
+
+                                <ul class="cart-totals">
+
+                                    @*<li><span class="sp1">Cart subtotals:</span> <span class="sp2">$1000.00</span></li>
+
+                                        <li><span class="sp1">Shipping:</span> <span class="sp2">FREE</span></li>*@
+
+                                    <li class="t"><span class="sp1">Total:</span> <input asp-for="Total" class="sp2" value="@Model.produit.PrixVente" /></li>
+
+                                </ul>
+
+                                <p>
+
+                                    <button class="biss-btn biss-btn-secondary margin-right-10" id="cart-update-cart"><i class="fa fa-refresh"></i> Annuler</button>
+
+                                    <button class="biss-btn biss-btn-primary" id="cart-checkout">Valider Paiement <i class="fa fa-arrow-right"></i></button>
+
+                                </p>
+
+                            </div>
+
+                        </aside>
+
+                        <!-- Totals end //-->
+
+                    </div>
 
                 </div>
-
-            </div>
-
+            </form>
         </div>
 
     </section>
